# enterprise-rag-knowledge-platform

./: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml  sample_query.json
docs/: adr-001-rag-service-layer.md
frontend/: index.html
frontend/src/: main.jsx  styles.css
src/enterprise_rag/: __init__.py  answering.py  api.py  chunking.py  cli.py  config.py  retrieval.py  sample_data.py  schemas.py  service.py  store.py  tracing.py
tests/: test_answering.py  test_api.py  test_chunking.py  test_service.py
